Fix H1 spacing issue

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -63,6 +63,11 @@
     }
   }
 
+  #welcome-section .lg-heading {
+    line-height: 1.5;
+    margin-bottom: 0;
+  }
+
   #about {
     padding: 4rem;
   }
